style.css
/* ... */
.contact-section p {
  font-weight: 700;
  font-size: 3.2rem;
  line-height: 4.4rem;
  color: #172b4d;
}

.contact-form {
  display: flex;
  flex-direction: column;
}

.name-box,
.mail-box,
.msg-box {
  font-family: "Inter", sans-serif;
  font-size: 1.5rem;
  line-height: 2.4rem;
  width: 100%;
  padding: 2rem;
  margin-bottom: 1rem;
  border-bottom: 1px solid #dbd8d7;
}

.msg-box {
  font-style: italic;
  background-color: #fbf8f7;
  border-style: none;
}

.msg-box::placeholder {
  /* use ::placeholder pseudo-element to change the placeholder text color */
  color: #3c3a39;
}

.btn-submit {
  align-self: center;
  max-width: 13.1rem;
  margin-top: 1.5rem;
  padding: 1rem;
}

footer {
  display: flex;
  flex-direction: column;
  border-top: 2px solid #dfe1e6;
  align-items: center;
}

/** Button actions **/

.btn-action:hover {
  cursor: pointer;
  background-color: #fff5e1;
  border: 0.1rem solid #f55800;
  color: #f55800;
}

.btn-action:disabled {
  background-color: #f4f1f0;
  color: #5b5957;
}

.btn-action:active {
  background-color: #e05304;
  color: #f4f1f0;
}

/** Animations **/

@keyframes slideInLeft {
  0% {
    transform: translateX(-100%);
  }

  100% {
    transform: translateX(0);
  }
}

/** Media Query - Desktop **/

@media only screen and (min-width: 768px) {
  .navbar,
  .headline,
  .about_me {
    min-width: 100vw;
  }

  /** NAVBAR **/

  .navbar {
    padding-right: 12rem;
  }

  .hide {
    display: block;
  }

  .brand-name {
    font-size: 2rem;
    line-height: 2rem;
    padding-left: 8%;
    animation: slideInLeft 2s 0.3s;
  }

  .ham-menu {
    display: none;
  }

  /** Headline **/

  .headline {
    flex-direction: row;
    align-items: center;
    overflow: hidden;
    background-size: contain;
    background-position: bottom -10rem right;
    min-height: 59rem;
    padding: 0;
    padding-left: 4rem;
    background-image: url("./img/background/Illustration-header-desktop.svg");
  }

  .about_me ul {
    text-align: left;
  }

  .headline-text {
    min-width: 40%;
    display: flex;
    flex-direction: column;
    text-align: left;
    padding: 19.2rem 0 19.2rem 0;
    gap: 2.2rem;
    order: 1;
  }

  .head-h1 {
    font-size: 7.2rem;
    line-height: 8.2rem;
  }

  .head-h1 span h2 {
    font-size: 3.2rem;
    line-height: 4.4rem;
  }

  .head-p {
    min-width: 80%;
    font-size: 2rem;
    line-height: 3.2rem;
  }

  /** Social Media **/

  .social-media {
    margin-left: 2.5rem;
    padding-right: 5rem;
  }

  .headline .social-media ul {
    display: flex;
    flex-direction: column;
  }

  .media-img {
    height: 2.4rem;
  }

  /** Works **/

  .works-container {
    display: grid;
    justify-items: center;
    align-items: center;
    grid-template-areas:
      "header header header"
      "left middle right";
  }

  .works-header-container {
    min-width: 100%;
  }

  .header-area {
    grid-area: header;
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 5rem;
  }

  .works-header {
    display: flex;
    align-items: center;
    margin-left: 1.5rem;
    margin-top: 10rem;
    margin-bottom: 12rem;
  }

  .works-header h1 {
    min-width: 31.5rem;
    font-size: 4rem;
    line-height: 5.2rem;
    color: #091e42;
    margin-right: 1.5rem;
  }

  .line {
    height: 0;
    min-width: 69%;
    border: 1px solid #212121;
  }

  .works-header-multipost {
    display: flex;
    gap: 2rem;
  }

  .img-placeholder {
    max-width: 56rem;
    flex-basis: 70%;
    margin-left: 1rem;
  }

  .works-stories {
    flex-basis: 30%;
  }

  .project-content {
    min-width: 100%;
    padding-top: 6rem;
  }

  .left {
    grid-area: left;
  }

  .middle {
    grid-area: middle;
  }

  .right {
    grid-area: right;
  }

  /** About Me **/

  .about_me {
    min-height: 60vw;
  }

  .about_me-text {
    display: flex;
    align-items: flex-start;
    width: 50%;
    gap: 1.5rem;
  }

  .about_me-text p {
    font-size: 2rem;
    line-height: 3.2rem;
  }

  .about_me-text h1 {
    font-size: 7.2rem;
    line-height: 8.15rem;
  }

  .about_me-container {
    background-image: url("./img/background/illustration-about\ me-desktop.svg");
    background-position: top 20% right;
    background-size: 40%;
    min-width: 100%;
    min-height: 85vh;
    align-items: flex-start;
    padding: 13rem 0;
    padding-left: 13rem;
    padding-right: 13rem;
  }

  .about_me hr {
    min-width: 100%;
    border: 0.1rem solid #fff;
  }

  .skills-section {
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 14%;
    max-height: 56rem;
  }

  .skills-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    min-height: 59.6rem;
    padding-top: 10rem;
  }

  /** contact-form **/

  .contact-section {
    min-width: 100%;
    max-height: 72rem;
  }

  .contact-form-container {
    display: flex;
    align-items: flex-start;
    min-width: 113rem;
    gap: 10.4rem;
    padding-right: 39rem;
  }

  .contact-form-container p {
    font-size: 4rem;
    line-height: 5.2rem;
    max-width: 52.5rem;
    min-height: 25.6rem;
    color: #262626;
    display: flex;
    align-items: center;
    text-align: left;
  }

  .contact-form {
    max-width: 68.4rem;
    min-height: 33rem;
    align-items: flex-start;
    padding: 0;
  }

  .btn-submit {
    min-width: 9.8rem;
    align-self: flex-start;
    font-size: 1.7rem;
    line-height: 2.4rem;
  }

  footer {
    display: flex;
    width: 100%;
    max-height: 7.2rem;
    margin-top: 6rem;
    flex-direction: column;
    border-top: 2px solid #dfe1e6;
    align-items: center;
  }

  footer .social-media {
    max-height: 7.2rem;
    padding-top: 5.5rem;
  }

  footer .media-img {
    height: 2.4rem;
  }

  /** Button actions **/

  .project-box .large-btn-area {
    display: none;
  }

  .project-box:hover .large-btn-area {
    display: block;
  }
}
/* ... */

